@@ -6,6 +6,10 @@
 
                                   Changelog
 
+Daniel (25 May 2006)
+- Michael Wallner provided a patch that allows "SESS" to be set with
+  CURLOPT_COOKIELIST, which then makes all session cookies get cleared.
+
 Daniel (11 May 2006)
 - David McCreedy provided a fix for CURLINFO_LASTSOCKET that does extended
   checks on the to-be-returned socket to make sure it truly seems to be alive
